--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "type": "module",
   "devDependencies": {
     "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "3.2.4",
     "typescript": "^5.3.3"
   }
 }
