--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "chess.js": "^1.0.0-beta.7",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "firebase": "^10.7.2",
