--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "trailingComma": "all",
   "printWidth": 100,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "endOfLine": "crlf"
 }
