--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "body-parser": "^1.20.2",
     "chess.js": "^1.0.0-beta.7",
     "dotenv": "^16.4.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
     "ws": "^8.16.0"
   },
   "type": "module",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
